@@ -1,3 +1,5 @@
+2006/8/14 -- released version 20060814_trunk
+
 2006/8/13 -- released version 20060813_trunk
 
 2006/8/12 -- released version 20060812_trunk
